SITE_TREINO_FRONT/Mudei algumas tags e um texto.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <p>Pequeno exemplo em HTML puro com alguns elementos comuns.</p>
 <p>Veja a seguir:</p>
 <nav>
-   <ul>
+   <ol>
       <li>Sobre</li>
       <li>Contato</li>
-      <li>Exercícios</li>
-   </ul>
+      <li>Ajuda</li>
+   </ol>
 </nav>
 
 <label>Escolha um curso:</label>
